# kineo-version-alterna

./: .gitignore  README.md  contexto-decisiones.md  docker-compose.yml  kineo-coach-backlog-inicial.md  kineo-coach-info.txt  kineo-coach-prd.md  kineo-coach-srs.md
backend/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/api/app/: main.py
backend/api/app/ai/: __init__.py  planner.py  planning_models.py
backend/api/app/core/: README.md  config.py  personalization.py  security.py
backend/api/app/db/: bootstrap.py  session.py
backend/api/app/models/: __init__.py  body_metric.py  exercise_catalog.py  exercise_log.py  exercise_substitution.py  initial_plan.py  nutrition_log.py  plan_modification.py  user.py  user_preferences.py  user_profile.py  weekly_goal.py  workout_block_completion.py  workout_exercise_selection.py  workout_session.py
backend/api/app/repositories/: activity_repository.py  exercise_log_repository.py  exercise_repository.py  goal_repository.py  plan_modification_repository.py  plan_repository.py  preferences_repository.py  profile_repository.py  user_repository.py
backend/api/app/rules/: README.md
backend/api/app/schemas/: activity.py  auth.py  exercise.py  exercise_log.py  experience.py  goals.py  onboarding.py  plan.py  plan_modification.py  preferences.py  reports.py
backend/api/app/services/: README.md  auth_service.py  exercise_log_service.py  exercise_service.py  experience_service.py  goals_service.py  nutrition_photo_service.py  onboarding_service.py  (+3 more)
backend/api/scripts/: seed_exercises.py
(+126 files in other folders)
